--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <h1>Hover through the text for the secret message.</h1>
+    <h1>Hover/Click through the text for the secret message.</h1>
 
     <div>
       <p>Hey, yes...yes <span class="msg">you</span>. Whenever the world seems too <span class="msg">mean</span>, just know that's when you need your loved ones <span class="msg">the</span> most. Your time in this <span class="msg">world</span> is limited, cherish it. Remember <span class="msg">to</span> laugh, enjoy the little things. If you feel like you have no one, just know you have <span class="msg">me</span>.</p>
