--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">  <title>Tables</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Secret Message</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans:400,400i">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
 
-    <h1>Hover through the text for the secret message.</h1>
+    <h1>Secret Message</h1>
 
     <div>
-      <p>Hey, yes...yes <span class="msg">you</span>. Whenever the world seems too <span class="msg">mean</span>, just know that's when you need your loved ones <span class="msg">the</span> most. Your time in this <span class="msg">world</span> is limited, cherish it. Remember <span class="msg">to</span> laugh, enjoy the little things. If you feel like you have no one, just know you have <span class="msg">me</span>.</p>
+      <q>Hey, yes...yes <span class="msg">you</span>. Whenever the world seems too <span class="msg">mean</span>, just know that's when you need your loved ones <span class="msg">the</span> most. Your time in this <span class="msg">world</span> is limited, cherish it. Remember <span class="msg">to</span> laugh, enjoy the little things. If you feel like you have no one, just know you have <span class="msg">me</span>.</q>
     </div>
 
-    <button type="text">Click if lazy.</button>
+    <button type="text">Click for secret message</button>
 
     <script src="main.js"></script>
   </body>
