Added site colors.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Secret Message</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans:400,400i">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
     <h1>Secret Message</h1>
 
     <div>
-      <q>Hey, yes...yes <span class="msg">you</span>. Whenever the world seems too <span class="msg">mean</span>, just know that's when you need your loved ones <span class="msg">the</span> most. Your time in this <span class="msg">world</span> is limited, cherish it. Remember <span class="msg">to</span> laugh, enjoy the little things. If you feel like you have no one, just know you have <span class="msg">me</span>.</q>
+      <q>I think <span class="msg">a</span> <span class="msg">hero</span> is an ordinary individual who <span class="msg">finds</span> <span class="msg">strength</span> <span class="msg">to</span> persevere and <span class="msg">endure</span> in spite of overwhelming obstacles.</q>
+      <p class="author">- Christopher Reeve</p>
     </div>
 
-    <button type="text">Click for secret message</button>
+    <button type="text">Click Me</button>
+
+    <footer>
+      <p>&copy; 2017 A daily dose of good vibes given by <a href="http://terrancecorley.github.io" target="_blank">Terrance Corley</a>.</p>
+    </footer>
 
     <script src="main.js"></script>
   </body>
